--- a/index.html
+++ b/index.html
@@ -1,1 +1,133 @@
-vanderwerffhospitality.com
+<!DOCTYPE HTML>
+<!--
+	Spectral by HTML5 UP
+	html5up.net | @n33co
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+	<head>
+		<title>Van Der Werff Hospitality</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+	</head>
+	<body class="landing">
+
+		<!-- Page Wrapper -->
+			<div id="page-wrapper">
+
+				<!-- Header -->
+					<header id="header" class="alt">
+						<h1><a href="index.html">Van der Werff Hospitality</a></h1>
+						<nav id="nav">
+							<ul>
+								<li class="special">
+									<a href="#menu" class="menuToggle"><span>Menu</span></a>
+									<div id="menu">
+										<ul>
+											<li><a href="index.html">HOME</a></li>
+											<li><a href="generic.html">WAAROM doe ik dit</a></li>
+											<li><a href="generic.html">WAT kan ik voor u betekenen</a></li>
+											<li><a href="generic.html">HOE gaan we samen van start</a></li>
+											<li><a href="generic.html">CONTACT wanneer maken we kennis met elkaar</a></li>
+										</ul>
+									</div>
+								</li>
+							</ul>
+						</nav>
+					</header>
+
+				<!-- Banner -->
+					<section id="banner">
+						<div class="inner">
+							<h2>Van der Werff Hospitality</h2>
+							<p>Specialisten in professionalisering in de gastvrijheidsbranche<br /></p>
+						</div>
+						<a href="#one" class="more scrolly">Zie Meer</a>
+					</section>
+
+				<!-- One -->
+					<section id="one" class="wrapper style1 special parallax">
+						<div class="inner">
+							<header class="major">
+								<h2>Wie ben ik?</h2>
+								<p>Piet van der Werff (1969) , heeft al ruim 40 jaar een enorme voorliefde voor de gastronomie.<br />
+								Toen hij op zijn 6e zijn eerste slak at aan het Italiaanse Lago Maggiore, ontwaakte zijn passie voor (slow) food.<br />
+								Na 12 intensieve jaren in de horecasales bij Lindenhoff, sloeg hij in 2014 een nieuwe weg in en deelt sindsdien <br />
+								met ongetemd enthousiasme zijn kennis en ervaring met (horeca)ondernemers. <br />
+								Hierbij stelt Piet zijn omvangrijke netwerk open voor een ieder die graag voorop wil lopen met zijn of haar (horeca)bedrijf.<br />
+								Naast de “eerste hulp voor horecaondernemers” houdt Piet zich bezig met het selecteren en leveren van gastronomische producten uit Italië en Spanje.</p>
+							</header>
+							<ul class="icons major">
+								<div class="image"><img src="images/vdw.png" alt="" /></div>
+							</ul>
+						</div>
+					</section>
+
+				<!-- Two -->
+					<section id="two" class="wrapper alt style2">
+						<section class="spotlight">
+							<div class="image"><img src="images/coaching.jpg" alt="" /></div><div class="content">
+								<h2>Coaching
+								</h2>
+								<p>Ik help u inzicht te krijgen in uw persoonlijke keuzes</p>
+							</div>
+						</section>
+						<section class="spotlight">
+							<div class="image"><img src="images/healing.jpg" alt="" /></div><div class="content">
+								<h2>Curing</h2>
+								<p>We maken samen uw bedrijf gezond</p>
+							</div>
+						</section>
+						<section class="spotlight">
+							<div class="image"><img src="images/concept.jpg" alt="" /></div><div class="content">
+								<h2>Conceptontwikkeling </h2>
+								<p>Ik help u een uniek en onderscheidend bedrijf neer te zetten in de hospitalitybranche</p>
+							</div>
+						</section>
+					</section>
+
+			
+				<!-- CTA -->
+					<section id="cta" class="wrapper style4">
+						<div class="inner">
+							<header>
+								<h2>Bent u geinteresseerd geraakt?</h2>
+								<p>Neem geheel vrijblijvend contact met ons op.</p>
+							</header>
+							<ul class="actions vertical">
+								<li><a href="#" class="button fit">Contact</a></li>
+							</ul>
+						</div>
+					</section>
+
+				<!-- Footer -->
+					<footer id="footer">
+						<ul class="icons">
+							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
+							<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+						</ul>
+						<ul class="copyright">
+							<li>&copy; Van Der Werff Hospitality</li><li>Design: <a href="http://designstudioz.nl">DESIGNSTUDIOZ</a></li>
+						</ul>
+					</footer>
+
+			</div>
+
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/skel.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+			<script src="assets/js/main.js"></script>
+
+	</body>
+</html>
