--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">Van der Werff Hospitality</a></h1>
+						<h1><a href="/">Van der Werff Hospitality</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
 									<a href="#menu" class="menuToggle"><span>Menu</span></a>
 									<div id="menu">
 										<ul>
-											<li><a href="index.html">HOME</a></li>
+											<li><a href="/">HOME</a></li>
 											<li><a href="generic.html">WAAROM doe ik dit</a></li>
 											<li><a href="generic.html">WAT kan ik voor u betekenen</a></li>
 											<li><a href="generic.html">HOE gaan we samen van start</a></li>
