add new block text

--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
 							<div class="image"><img src="images/coaching.jpg" alt="" /></div><div class="content">
-								<h2>Coaching
-								</h2>
-								<p>Ik help u inzicht te krijgen in uw persoonlijke keuzes</p>
+								<h2>COACHING IN DE GASTVRIJHEIDSBRANCHE</h2>
+								<p>Ik help je gerichte keuzes te maken voor de toekomst</p>
+								<p>We leggen de focus op de plek die echt aandacht behoeft en werken vervolgens aan perspectief. We maken jouw organisatie dienstbaar aan de vastgestelde doelen. Ik stel graag een ‘coachingsplan van aanpak’ op maat met je samen!</p>
 							</div>
 						</section>
 						<section class="spotlight">
