add new block text 2

--- a/index.html
+++ b/index.html
@@ -63,20 +63,22 @@
 						<section class="spotlight">
 							<div class="image"><img src="images/coaching.jpg" alt="" /></div><div class="content">
 								<h2>COACHING IN DE GASTVRIJHEIDSBRANCHE</h2>
-								<p>Ik help je gerichte keuzes te maken voor de toekomst</p>
+								<p><i>Ik help je gerichte keuzes te maken voor de toekomst.</i></p>
 								<p>We leggen de focus op de plek die echt aandacht behoeft en werken vervolgens aan perspectief. We maken jouw organisatie dienstbaar aan de vastgestelde doelen. Ik stel graag een ‘coachingsplan van aanpak’ op maat met je samen!</p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/healing.jpg" alt="" /></div><div class="content">
-								<h2>Curing</h2>
-								<p>We maken samen uw bedrijf gezond</p>
+								<h2>CULINAIRE CONCEPTONTWIKKELING</h2>
+								<p><i>We bouwen samen aan een onderscheidende culinaire formule.</i></p>
+								<p>Inspireren in plaats van kopiëren – de Blue Ocean in plaats van de Red Sea – Uitgaande van je eigen dromen en drives creëren we een unieke en winnende format. Mijn omvangrijke culinair netwerk zetten we daarbij in als hulpmiddel en accelerator!</p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/concept.jpg" alt="" /></div><div class="content">
-								<h2>Conceptontwikkeling </h2>
-								<p>Ik help u een uniek en onderscheidend bedrijf neer te zetten in de hospitalitybranche</p>
+								<h2>FINE FOOD RESOURCE MANAGEMENT</h2>
+								<p><i>Ik zoek bijzondere ingrediënten voor je om je gasten mee te verleiden</i></p>
+								<p>Verleidelijke verhalen achter bijzondere producten; authentieke smaken die een overgetelijke indruk op je gasten achterlaten… Ik neem je mee naar de fine food-bronnen van mijn netwerk en ontsluit deze, zodat we samen aan een waanzinnig menu kunnen bouwen!</p>
 							</div>
 						</section>
 					</section>
