--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 								<p>Neem geheel vrijblijvend contact met ons op.</p>
 							</header>
 							<ul class="actions vertical">
-								<li><a href="#" class="button fit">Contact</a></li>
+								<li><a href="mailto:piet@vanderwerffhospitality.com?subject=Contact Van Der Werff Hospitality&body=Beste Piet," class="button fit">Contact</a></li>
 							</ul>
 						</div>
 					</section>
@@ -100,14 +100,10 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="icons">
-							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-							<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+							<li><a href="mailto:piet@vanderwerffhospitality.com?subject=Contact Van Der Werff Hospitality&body=Beste Piet," class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 						</ul>
 						<ul class="copyright">
-							<li>&copy; Van Der Werff Hospitality</li><li>Design: <a href="http://designstudioz.nl">DESIGNSTUDIOZ</a></li>
+							<li>&copy; Van Der Werff Hospitality</li>
 						</ul>
 					</footer>
 
