--- a/index.html
+++ b/index.html
@@ -89,7 +89,13 @@
 						<div class="inner">
 							<header>
 								<h2>Bent u geinteresseerd geraakt?</h2>
-								<p>Neem geheel vrijblijvend contact met ons op.</p>
+								<h3>Neem geheel vrijblijvend contact met ons op.</h3>
+								<p>Van Der Werfff Hospitality</p>
+								<p>Piet Van Der Werff</p> 
+								<p>Oudwijkerlaan 1G</p> 
+								<p>3581 TA Utrecht</p>
+								<p>piet@vanderwerffhospitality.com</p>
+								<p><a href="tel:+31 643896976">+31 643896976</a></p>
 							</header>
 							<ul class="actions vertical">
 								<li><a href="mailto:piet@vanderwerffhospitality.com?subject=Contact Van Der Werff Hospitality&body=Beste Piet," class="button fit">Contact</a></li>
