--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
 					<section id="banner">
 						<div class="inner">
 							<h2>Van der Werff Hospitality</h2>
-							<p>Specialisten in professionalisering in de gastvrijheidsbranche<br /></p>
+							<p><i>Culinairen</i> Coach en Specialist<br /></p>
 						</div>
 						<a href="#one" class="more scrolly">Zie Meer</a>
 					</section>
 
 				<!-- One -->
-					<section id="one" class="wrapper style1 special parallax">
+			        <!--	<section id="one" class="wrapper style1 special parallax">
 						<div class="inner">
 							<header class="major">
 								<h2>Wie ben ik?</h2>
@@ -56,8 +56,8 @@
 								<div class="image"><img src="images/vdw.png" alt="" /></div>
 							</ul>
 						</div>
-					</section>
-
+				-->	</section>
+	
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
@@ -102,6 +102,19 @@
 							</ul>
 						</div>
 					</section>
+
+				<section id="one" class="wrapper style1 special parallax">
+                                                <div class="inner">
+                                                        <header class="major">
+                                                                <h2>Quote of the week:</h2>
+                                                                <p>De verleiding om te ondernemen in de gastvrijheidsbranche is groot; de kans om niet boven het culinair maaiveld uit te steken is echter groter… Overtuiging, de juiste focus en moed zijn belangrijke ingrediënten om uiteindelijk een winnende gastvrijheidsformule in huis te hebben!</p>
+                                                        </header>
+                                                        <ul class="icons major">
+                                                                <div class="image"><img src="images/vdw.png" alt="" /></div>
+                                                        </ul>
+                                                </div>
+                                -->     </section>
+
 
 				<!-- Footer -->
 					<footer id="footer">
