--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                                                                 <div class="image"><img src="images/vdw.png" alt="" /></div>
                                                         </ul>
                                                 </div>
-                                -->     </section>
+                                </section>
 
 
 				<!-- Footer -->
