--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 					<section id="banner">
 						<div class="inner">
 							<h2>Van der Werff Hospitality</h2>
-							<p><i>Culinairen</i> Coach en Specialist<br /></p>
+							<p><i>Culinair</i> Coach en Specialist<br /></p>
 						</div>
 						<a href="#one" class="more scrolly">Zie Meer</a>
 					</section>
@@ -68,17 +68,17 @@
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/healing.jpg" alt="" /></div><div class="content">
+							<div class="image"><img src="images/culinaire.jpg" alt="" /></div><div class="content">
 								<h2>CULINAIRE CONCEPTONTWIKKELING</h2>
 								<p><i>We bouwen samen aan een onderscheidende culinaire formule.</i></p>
 								<p>Inspireren in plaats van kopiëren – de Blue Ocean in plaats van de Red Sea – Uitgaande van je eigen dromen en drives creëren we een unieke en winnende format. Mijn omvangrijke culinair netwerk zetten we daarbij in als hulpmiddel en accelerator!</p>
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/concept.jpg" alt="" /></div><div class="content">
+							<div class="image"><img src="images/fine-food.jpg" alt="" /></div><div class="content">
 								<h2>FINE FOOD RESOURCE MANAGEMENT</h2>
 								<p><i>Ik zoek bijzondere ingrediënten voor je om je gasten mee te verleiden</i></p>
-								<p>Verleidelijke verhalen achter bijzondere producten; authentieke smaken die een overgetelijke indruk op je gasten achterlaten… Ik neem je mee naar de fine food-bronnen van mijn netwerk en ontsluit deze, zodat we samen aan een waanzinnig menu kunnen bouwen!</p>
+								<p>Verleidelijke verhalen achter bijzondere producten; authentieke smaken die een onvergetelijke indruk op je gasten achterlaten… Ik neem je mee naar de fine food-bronnen van mijn netwerk en ontsluit deze, zodat we samen aan een waanzinnig menu kunnen bouwen!</p>
 							</div>
 						</section>
 					</section>
@@ -109,9 +109,6 @@
                                                                 <h2>Quote of the week:</h2>
                                                                 <p>De verleiding om te ondernemen in de gastvrijheidsbranche is groot; de kans om niet boven het culinair maaiveld uit te steken is echter groter… Overtuiging, de juiste focus en moed zijn belangrijke ingrediënten om uiteindelijk een winnende gastvrijheidsformule in huis te hebben!</p>
                                                         </header>
-                                                        <ul class="icons major">
-                                                                <div class="image"><img src="images/vdw.png" alt="" /></div>
-                                                        </ul>
                                                 </div>
                                 </section>
 
