--- a/index.html
+++ b/index.html
@@ -64,21 +64,21 @@
 							<div class="image"><img src="images/coaching.jpg" alt="" /></div><div class="content">
 								<h2>COACHING IN DE GASTVRIJHEIDSBRANCHE</h2>
 								<p><i>Ik help je gerichte keuzes te maken voor de toekomst.</i></p>
-								<p>We leggen de focus op de plek die echt aandacht behoeft en werken vervolgens aan perspectief. We maken jouw organisatie dienstbaar aan de vastgestelde doelen. Ik stel graag een ‘coachingsplan van aanpak’ op maat met je samen!</p>
+								<p>We leggen de focus op de plek die echt aandacht behoeft en werken vervolgens aan perspectief. We maken jouw organisatie dienstbaar aan de vastgestelde doelen. Ik stel graag een ‘coachingsplan van aanpak’ op maat met je samen.</p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/culinaire.jpg" alt="" /></div><div class="content">
 								<h2>CULINAIRE CONCEPTONTWIKKELING</h2>
 								<p><i>We bouwen samen aan een onderscheidende culinaire formule.</i></p>
-								<p>Inspireren in plaats van kopiëren – de Blue Ocean in plaats van de Red Sea – Uitgaande van je eigen dromen en drives creëren we een unieke en winnende format. Mijn omvangrijke culinair netwerk zetten we daarbij in als hulpmiddel en accelerator!</p>
+								<p>Inspireren in plaats van kopiëren – de Blue Ocean in plaats van de Red Sea – Uitgaande van je eigen dromen en drives creëren we een unieke en winnende format. Mijn omvangrijke culinair netwerk zetten we daarbij in als hulpmiddel en accelerator.</p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/fine-food.jpg" alt="" /></div><div class="content">
 								<h2>FINE FOOD RESOURCE MANAGEMENT</h2>
-								<p><i>Ik zoek bijzondere ingrediënten voor je om je gasten mee te verleiden</i></p>
-								<p>Verleidelijke verhalen achter bijzondere producten; authentieke smaken die een onvergetelijke indruk op je gasten achterlaten… Ik neem je mee naar de fine food-bronnen van mijn netwerk en ontsluit deze, zodat we samen aan een waanzinnig menu kunnen bouwen!</p>
+								<p><i>Op zoek naar bijzondere ingrediënten om de gast mee te verleiden.</i></p>
+								<p>Verleidelijke verhalen achter bijzondere producten; authentieke smaken die een onvergetelijke indruk op je gasten achterlaten… Ik neem je mee naar de fine food-bronnen van mijn netwerk en ontsluit deze, zodat we samen aan een waanzinnig menu kunnen bouwen.</p>
 							</div>
 						</section>
 					</section>
@@ -90,8 +90,8 @@
 							<header>
 								<h2>Bent u geinteresseerd geraakt?</h2>
 								<p>Neem geheel vrijblijvend contact met ons op.</p>
-								<p>Van Der Werfff Hospitality</br>
-								Piet Van Der Werff</br> 
+								<p>van der Werff Hospitality</br>
+								Piet van der Werff</br> 
 								Oudwijkerlaan 1G</br> 
 								3581 TA Utrecht</br>
 								piet@vanderwerffhospitality.com</p>
@@ -107,7 +107,7 @@
                                                 <div class="inner">
                                                         <header class="major">
                                                                 <h2>Quote of the week:</h2>
-                                                                <p>De verleiding om te ondernemen in de gastvrijheidsbranche is groot; de kans om niet boven het culinair maaiveld uit te steken is echter groter… Overtuiging, de juiste focus en moed zijn belangrijke ingrediënten om uiteindelijk een winnende gastvrijheidsformule in huis te hebben!</p>
+                                                                <p>De verleiding om te ondernemen in de gastvrijheidsbranche is groot; de kans om niet boven het culinair maaiveld uit te steken is echter groter… Overtuiging, de juiste focus en moed zijn belangrijke ingrediënten om uiteindelijk een winnende gastvrijheidsformule in huis te hebben.</p>
                                                         </header>
                                                 </div>
                                 </section>
