--- a/index.html
+++ b/index.html
@@ -62,25 +62,33 @@
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
 							<div class="image"><img src="images/coaching.jpg" alt="" /></div><div class="content">
-								<h2>COACHING IN DE GASTVRIJHEIDSBRANCHE</h2>
-								<p><i>Ik help je gerichte keuzes te maken voor de toekomst.</i></p>
-								<p>We leggen de focus op de plek die echt aandacht behoeft en werken vervolgens aan perspectief. We maken jouw organisatie dienstbaar aan de vastgestelde doelen. Ik stel graag een ‘coachingsplan van aanpak’ op maat met je samen.</p>
+								<h2>GASTVRIJHEIDSCOACH</h2>
+								<p><i>Waarom aanrommelen? Bereik de doelen van uw bedrijf!</i></p>
+								<p>Vanuit het gastperspectief onderzoek ik samen met u welk onderdeel van uw organisatie extra aandacht nodig heeft en werk samen met u toe naar dit perspectief.<br/>Samen stellen we een coachingsplan op, zodat binnen een gestelde periode en volgens een vastgesteld plan de doelen bereikt worden die u voor ogen hebt. 
+</p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/culinaire.jpg" alt="" /></div><div class="content">
-								<h2>CULINAIRE CONCEPTONTWIKKELING</h2>
-								<p><i>We bouwen samen aan een onderscheidende culinaire formule.</i></p>
-								<p>Inspireren in plaats van kopiëren – de Blue Ocean in plaats van de Red Sea – Uitgaande van je eigen dromen en drives creëren we een unieke en winnende format. Mijn omvangrijke culinair netwerk zetten we daarbij in als hulpmiddel en accelerator.</p>
+								<h2>CULINAIR CONCEPTONTWIKKELAAR</h2>
+								<p><i>Waarom meer van hetzelfde? Wees een onderscheidende culinaire formule!</i></p>
+								<p>Denkt u ook liever in one big blue ocean in plaats van het modderplasje in uw achtertuin? Wilt u inspireren in plaats van kopiëren? Uitgaan van uw eigen dromen, fantasie, drive en belevenissen vormt de sleutel tot een winnend concept. Ik denk met u mee, maak die droom samen met u waar door hem te concretiseren. Daarbij zet ik mijn omvangrijke netwerk in als hulpmiddel en accelerator.</p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/fine-food.jpg" alt="" /></div><div class="content">
 								<h2>FINE FOOD RESOURCE MANAGEMENT</h2>
-								<p><i>Op zoek naar bijzondere ingrediënten om de gast mee te verleiden.</i></p>
-								<p>Verleidelijke verhalen achter bijzondere producten; authentieke smaken die een onvergetelijke indruk op je gasten achterlaten… Ik neem je mee naar de fine food-bronnen van mijn netwerk en ontsluit deze, zodat we samen aan een waanzinnig menu kunnen bouwen.</p>
+								<p><i>Verleid en verras je gasten met bijzondere ingrediënten.</i></p>
+								<p>Wie de pure smaak van licht gezouten ‘00’ anchovis van een klein familiebedrijf aan de ruige Cantabrische kust in Noord-Spanje heeft ontdekt, is voor het culinaire leven ‘getekend’. Mooie producten met verleidelijke verhalen. Authentieke smaken die een onvergetelijke indruk achterlaten op uw gasten. Via Van der Werff Hospitality heeft u toegang tot exclusieve fine food-bronnen, waarmee u gegarandeerd een unieke smaakbeleving aan uw menu toevoegt.</p>
 							</div>
 						</section>
+						 <section class="spotlight">
+                                                        <div class="image"><img src="images/fine-food.jpg" alt="" /></div><div class="content">
+                                                                <h2>FOOD & WINE EXPERIENCES EN STORYTELLING</h2>
+                                                                <p><i>Een culinaire metamorfose in uw huis of op locatie</i></p>
+                                                                <p>Wij verzorgen een uniek foodevent voor u waarin bijzondere producten en smaken met hun verhaal centraal staan en ter plekke tot leven komen. Met een professionele en gepassioneerde zwarte en witte brigade brengen wij samen met u een onvergetelijke ervaring voor uw gasten tot stand.</p>
+                                                        </div>
+                                                </section>
 					</section>
 
 			
