--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 							</div>
 						</section>
 						 <section class="spotlight">
-                                                        <div class="image"><img src="images/fine-food.jpg" alt="" /></div><div class="content">
+                                                        <div class="image"><img src="images/food-wine.jpg" alt="" /></div><div class="content">
                                                                 <h2>FOOD & WINE EXPERIENCES EN STORYTELLING</h2>
                                                                 <p><i>Een culinaire metamorfose in uw huis of op locatie</i></p>
                                                                 <p>Wij verzorgen een uniek foodevent voor u waarin bijzondere producten en smaken met hun verhaal centraal staan en ter plekke tot leven komen. Met een professionele en gepassioneerde zwarte en witte brigade brengen wij samen met u een onvergetelijke ervaring voor uw gasten tot stand.</p>
