--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
 					<section id="cta" class="wrapper style4">
 						<div class="inner">
 							<header>
-								<h2>Bent u geinteresseerd geraakt?</h2>
+								<h2>Bent u geïnteresseerd geraakt?</h2>
 								<p>Neem geheel vrijblijvend contact met ons op.</p>
-								<p>van der Werff Hospitality</br>
+								<p>Van der Werff Hospitality</br>
 								Piet van der Werff</br> 
 								Oudwijkerlaan 1G</br> 
 								3581 TA Utrecht</br>
