--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
 						</ul>
 						<ul class="copyright">
 							<li>&copy; Van Der Werff Hospitality</li>
+							<li><a target="_new" title="Culinair Weekend Weg" href="https://culinairweekendweg.nl">culinairweekendweg.nl/</a></li>
 						</ul>
 					</footer>
 
