--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
 								<p>Neem geheel vrijblijvend contact met ons op.</p>
 								<p>Van der Werff Hospitality</br>
 								Piet van der Werff</br> 
-								Oudwijkerlaan 1G</br> 
-								3581 TA Utrecht</br>
+								Talmalaan 95</br> 
+								3515 CW Utrecht</br>
 								piet@vanderwerffhospitality.com</p>
 								<p><a href="tel:+31643896976">+31 643896976</a></p>
 							</header>
